--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,5 +19,9 @@ jobs:
     - name: Build SpeakNote project
       run: xcodebuild -project SpeakNote.xcodeproj -scheme SpeakNote -sdk iPhone simulator -configuration Debug
 
+    - name: List available simulators
+      run: xcrun small list devices
+  
     - name: Run tests
-      run: xcodebuild test -project SpeakNote.xcodeproj -scheme SpeakNote -sdk iPhone simulator -destination 'platform=iOS Simulator,name=Any iOS Simulator Device'
+      run: xcodebuild test -project SpeakNote.xcodeproj -scheme SpeakNote -sdk iphonesimulator -destination 'platform=iOS Simulator,name=Any iOS Simulator Device'
+
