--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -23,4 +23,4 @@ jobs:
       run: xcrun simctl list devices
 
     - name: Run tests
-      run: xcodebuild test -project SpeakNote.xcodeproj -scheme SpeakNote -sdk iphonesimulator -destination 'platform=iOS Simulator,name=Any iOS Simulator Device'
+      run: xcodebuild test -project SpeakNote.xcodeproj -scheme SpeakNote -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14'
