--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -21,6 +21,6 @@ jobs:
 
     - name: List available simulators
       run: xcrun simctl list devices
-
+      
     - name: Run tests
-      run: xcodebuild test -project SpeakNote.xcodeproj -scheme SpeakNote -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14'
+      run: xcodebuild test -project SpeakNote.xcodeproj -scheme SpeakNote -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.4'
