--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Generate Config.xcconfig
       run: |
         echo "API_KEY = secrets.API_KEY" > SpeakNote/Config.xcconfig
-        # echo "API_KEY = ${{ se#crets.API_KEY }}" > SpeakNote/Config.xcconfig
+        # echo "API_KEY = ${{ secrets.API_KEY }}" > SpeakNote/Config.xcconfig
         
     - name: Set up Xcode
       uses: maxim-lobanov/setup-xcode@v1
