--- a/SpeakNote/Info.plist
+++ b/SpeakNote/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>OPENAI AssistantID</key>
+	<string>$(OPENAI_ASSISTANTID)</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>SpeakNote needs access to the microphone to record your voice</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
