--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Build SpeakNote project
       run: xcodebuild -project SpeakNote.xcodeproj -scheme SpeakNote -sdk iphonesimulator -configuration Debug
 
-    - name: List available simulators
-      run: xcrun simctl list devices
+    # - name: List available simulators
+      # run: xcrun simctl list devices
       
     - name: Run tests
       run: xcodebuild test -project SpeakNote.xcodeproj -scheme SpeakNote -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.2'
